# Numerical-methods-2

./: main.cpp  meson.build  run.sh
include/: Iterative_methods.hpp  Matrix.hpp
src/: chebyshev_one_step.cpp  chebyshev_two_step.cpp
